ricos scheise aufraeumen

--- a/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
+++ b/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
@@ -20,8 +20,6 @@
 </wot-page>
 
 <wot-success-overlay (continue)="continue()" #successOverlay>
-  Bravo!<br>
   Ihr habt den Objektzeichnungen eine Kategorie zugewiesen. Die KI kann nun darauf trainiert werden, selbstständig
-  Zeichnungen einer Kategorie zuzuordnen.<br>
-  SCHRITT ABSCHLIESSEN
+  Zeichnungen einer Kategorie zuzuordnen
 </wot-success-overlay>
