--- a/wot-frontend/src/app/pages/data-overview/data-overview.component.html
+++ b/wot-frontend/src/app/pages/data-overview/data-overview.component.html
@@ -27,10 +27,8 @@
 </wot-page>
 
 <wot-success-overlay (continue)="continue()" #successOverlay>
-  Bravo! <br>
   Ihr habt euch mit den verschiedenen Objekten im Weltall vertraut gemacht. Nun könnt ihr das Erkennungssystem
-  entwickeln. <br>
-  ZUM NÄCHSTEN SCHRITT
+  entwickeln.
 </wot-success-overlay>
 
 <wot-popover #popover></wot-popover>
