--- a/wot-frontend/src/app/pages/analytics/analytics.component.html
+++ b/wot-frontend/src/app/pages/analytics/analytics.component.html
@@ -4,7 +4,7 @@
       Schritt 7: Analyse
     </h1>
     <p>
-      Auf dieser Seite seht ihr wie eure selbstgezeichneten Bilder erkannt wurden.
+      Auf dieser Seite seht ihr, wofür die KI eure selbstgezeichneten Bilder gehalten hat.
     </p>
   </wot-step-info>
   <wot-content>
