--- a/wot-frontend/src/app/pages/credits/credits.component.html
+++ b/wot-frontend/src/app/pages/credits/credits.component.html
@@ -8,7 +8,7 @@
 
         <div class="titlecontent">
 
-            <div class="center header">Mission <span *ngIf="win">erfolgreich!!!</span><span
+            <div class="center header">Mission <span *ngIf="win">erfolgreich!</span><span
                     *ngIf="!win">gescheitert!</span></div>
 
             <div><span *ngIf="win">Ihr habt es geschafft</span><span *ngIf="!win">Da ist etwas bei der Entwicklung des
