--- a/wot-frontend/src/app/pages/landing/landing.component.html
+++ b/wot-frontend/src/app/pages/landing/landing.component.html
@@ -8,7 +8,7 @@
     <wot-row>
       <p>
         Herzlich willkommen an der Station zu Machine Learning. Jetzt dürft ihr selbst ausprobieren, was hinter dem
-        Begriff „maschinelles Lernen“ steckt..
+        Begriff „maschinelles Lernen“ steckt.
       </p>
       <p>
         Nach den neuesten Umbauten am Truck kann dieser auch durch das Weltall fliegen. Zu den Umbauten zählen
