--- a/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
+++ b/wot-frontend/src/app/pages/data-labeling/data-labeling.component.html
@@ -21,5 +21,5 @@
 
 <wot-success-overlay (continue)="continue()" #successOverlay>
   Ihr habt den Objektzeichnungen eine Kategorie zugewiesen. Die KI kann nun darauf trainiert werden, selbstständig
-  Zeichnungen einer Kategorie zuzuordnen
+  Zeichnungen einer Kategorie zuzuordnen.
 </wot-success-overlay>
