Training: Added popups (WIP)

--- a/wot-frontend/src/app/common/popover/wot-popover/wot-popover.component.html
+++ b/wot-frontend/src/app/common/popover/wot-popover/wot-popover.component.html
@@ -1,4 +1,4 @@
 
-<div [@popoverInOut]="top+left" [ngStyle]="{'top': top + 'px', 'left': left + 'px', 'width': width + 'px', 'padding': padding + 'px', 'visibility': active ? 'visible' : 'hidden', 'z-index': 100}" class="popover" #popover>
+<div [@popoverInOut]="top+left" [ngStyle]="{'top': top + 'px', 'left': left + 'px', 'width': width + 'px', 'padding': padding + 'px', 'visibility': active ? 'visible' : 'hidden', 'z-index': 100}" [ngClass]="grey ? 'popover grey' : 'popover'" #popover>
   {{text}}
 </div>
