--- a/wot-frontend/src/app/common/popover/wot-popover/wot-popover.component.scss
+++ b/wot-frontend/src/app/common/popover/wot-popover/wot-popover.component.scss
@@ -16,3 +16,6 @@
     border-width: 10px 10px 0 10px;
     border-color: var(--color-bg-lighter) transparent transparent transparent;
 }
+.grey {
+    opacity: 0.5;
+}
