--- a/wot-frontend/src/app/pages/training/training.component.html
+++ b/wot-frontend/src/app/pages/training/training.component.html
@@ -20,10 +20,11 @@
     <div #popoverTarget2></div>
     <neural-net-sim #neuralNet></neural-net-sim>
     <div #popoverTarget4></div>
+    <div #popoverTarget7></div>
   </wot-column>
   <wot-container>
-    <div class="container">
-      <wot-row #popoverTarget5>
+    <div class="container" #popoverTarget5>
+      <wot-row>
         <wot-progress-bar height="24px" width="400px" [label]="'Epoche '+this.epoch+'/1000'" [progress]="this.epoch"
           [total]="1000" [animationSpeed]="1000*delayFactor"></wot-progress-bar>
       </wot-row>
@@ -35,16 +36,16 @@
         <div class="info-text" *ngIf="stage >= 2">
           <p style="color: red;"*ngIf="stage === 2">HINWEIS: Das Training des Modells ist rechenintensiv und deswegen sehr langsam. Daher beschleunigen wir das Ganze jetzt.</p>
           <p style="color: red;"*ngIf="stage === 2">Klickt dafür auf „TRAINING FORTSETZEN“!</p>
-          <!--          <p *ngIf="stage > 2 && epoch <= 200">Beschleunigung: {{2/delayFactor}}x</p>-->
-          <p *ngIf="epoch > 3">
+          <p *ngIf="stage > 2 && epoch <= 200">Beschleunigung: {{2/delayFactor}}x</p>
+          <p *ngIf="epoch > 200">
             HINWEIS: Das Training des Modells ist rechenintensiv und deswegen sehr langsam. Daher beschleunigen wir das
             Ganze jetzt.<br><br>
             Beschleunigung: HYPERSPEED
           </p>
         </div>
       </wot-row>
-      <div style="position: absolute; bottom: 48px; width: calc(100% - 96px)">
-        <wot-row popoverTarget6>
+      <div style="position: absolute; bottom: 48px; width: calc(100% - 96px)" #popoverTarget6>
+        <wot-row>
           <h2>Genauigkeit: {{accuracy | number: '1.0-2'}} %</h2>
         </wot-row>
         <wot-row>
