--- a/wot-frontend/src/app/pages/training/training.component.html
+++ b/wot-frontend/src/app/pages/training/training.component.html
@@ -17,10 +17,8 @@
       <wot-button slot="fill" (press)="startTraining()" [disabled]="stage != 0" *ngIf="stage < 2">TRAINING STARTEN</wot-button>   
       <wot-button slot="fill" (press)="startTraining()" [disabled]="stage != 2" *ngIf="stage >= 2 && stage < 4">TRAINING FORTSETZEN</wot-button> 
     </div>
-    <div #popoverTarget2></div>
+    <div #popoverTarget2 #popoverTarget4 #popoverTarget7></div>
     <neural-net-sim #neuralNet></neural-net-sim>
-    <div #popoverTarget4></div>
-    <div #popoverTarget7></div>
   </wot-column>
   <wot-container>
     <div class="container" #popoverTarget5>
