--- a/wot-frontend/src/app/pages/game/gameover-overlay/gameover-overlay.component.scss
+++ b/wot-frontend/src/app/pages/game/gameover-overlay/gameover-overlay.component.scss
@@ -43,3 +43,27 @@ $glow: rgba(#fff, 0.5);
   }
 }
 
+.hit-list-heart {
+  --ionicon-stroke-width: 50px;
+  font-size: 50px;
+}
+
+.hit-list-col {
+  background-color: var(--color-bg-dark);
+  border: var(--color-primary-light);
+  border-style: solid;
+  height: 75px;
+  vertical-align: middle;
+  margin: 0 10px 0 10px;  
+  padding-inline: 10px;
+  font-size: 1.5em;
+}
+
+.hit-list-img {
+  width: 50px;
+  height: 50px;
+}
+
+.hit-list-label {
+  width: 400px;
+}
