Defeeat-Site neue Buttons

--- a/wot-frontend/src/app/common/buttons/wot-button/wot-button.component.html
+++ b/wot-frontend/src/app/common/buttons/wot-button/wot-button.component.html
@@ -5,9 +5,17 @@
    [style.background]="getBackground()"
    [style.color]="getColorStyle()"
    [style.border-color]="getColorStyle()"
+   [style.width]="getWidth()"
 >
   <span>
-    <ng-content *ngIf="!icon"></ng-content>
+    <ng-content *ngIf="!icon" [style.text-algin]="getTextAlign()"></ng-content>
     <ion-icon name="{{icon}}" class="btn-icon" *ngIf="icon"></ion-icon>
+    <div *ngIf="texticon" class="texticon">
+      <ion-icon name="{{texticon}}" class="texticon" *ngIf="texticon"></ion-icon>
+      <ion-icon name="{{texticon2}}" class="texticon" *ngIf="texticon2"></ion-icon>
+      <ion-icon name="{{texticon3}}" class="texticon" *ngIf="texticon3"></ion-icon>
+      <div class="texticon-count" *ngIf="texticonCount">{{texticonCount}}</div>
+      <div class="texticon-label" *ngIf="texticonLabel">{{texticonLabel}}</div>
+    </div>
   </span>
 </a>
