--- a/wot-frontend/src/app/pages/game/gameover-overlay/gameover-overlay.component.scss
+++ b/wot-frontend/src/app/pages/game/gameover-overlay/gameover-overlay.component.scss
@@ -67,3 +67,10 @@ $glow: rgba(#fff, 0.5);
 .hit-list-label {
   width: 400px;
 }
+
+.defeat_button {
+  width: 300px;
+  height: 300px;
+  padding: 10px;
+  text-align: center;
+}
