--- a/wot-frontend/src/app/pages/game/game.component.html
+++ b/wot-frontend/src/app/pages/game/game.component.html
@@ -11,7 +11,7 @@
     <wot-life-bar [maxLifes]="3" [lifes]="truck.health"></wot-life-bar>
 </div>
 <wot-success-overlay (continue)="continue()" [visible]="true" [showIcon]="false" [header]="'Infos zur Mission'" [buttonLabel]="'Bereit? Mission starten!'" #infoOverlay>
-    Gleich startet die Mission. Dabei könnt ihr zusehen, wie sich euer Erkennungssystem im Weltall schlägt. Auf den Truck werden verschiedene Objekte zufliegen, die jeweils mit dem von euch trainierten Erkennungssystem analysiert und nach euren Regeln behandelt werden. Unten rechts könnt ihr außerdem selbst Objekte zeichnen, um den Truck damit zu testen.
+    Gleich startet die Mission! Dabei könnt ihr zusehen, wie sich euer Erkennungssystem im Weltall schlägt. Auf den Truck werden verschiedene Objekte zufliegen, die jeweils mit dem von euch trainierten Erkennungssystem analysiert und nach euren Regeln behandelt werden. Unten rechts könnt ihr außerdem selbst Objekte zeichnen, um den Truck damit zu testen.
 </wot-success-overlay>
 <gameover-overlay *ngIf="gamestatus!=0" [win]="gamestatus===1"></gameover-overlay>
 <wot-popover *ngIf="survivedObjects <= 10 && gamestatus===0" #popover></wot-popover>
